<resources>
	<string name="app_name">Gamified Habit Tracker</string>
	<string name="fist_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="uname">Username</string>
	<string name="have_account">Already have an account? Log in!</string>
	<string name="password">Password</string>
	<string name="confirm_password">Confirm password</string>
	<string name="email">Email</string>
	<string name="birthdate">Birthdate</string>
	<string name="is_admin">Admin</string>
	<string name="signup">Sign up</string>
	<string name="login">Log in</string>
	<string name="no_account">Don\'t have an account? Sign Up!</string>
	<string name="sign_out">Sign out</string>
	<string name="view_profile">View profile</string>
	<string name="add_habit">Add habit</string>
	<string name="habit_title">Title</string>
	<string name="habit_details">Details</string>
	<string name="habit_done_it_today">Done it today?</string>
	<string name="habit_periodicity">Frequency in days (0 = everyday)</string>
	<string name="no_habits">No habits yet</string>
	<string name="list_of_habits">List of habits</string>
	<string name="habit_check_in_button">Check In</string>
	<string name="delete_habit">Delete habit</string>
</resources>