<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".controller.AddHabitActivity">

	<EditText
		android:id="@+id/editTextTextHabitTitle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="10dp"
		android:layout_marginTop="5dp"
		android:layout_marginEnd="10dp"
		android:layout_marginBottom="5dp"
		android:ems="10"
		android:hint="@string/habit_title"
		android:inputType="textPersonName"
		android:minHeight="48dp" />

	<EditText
		android:id="@+id/editTextTextHabitDetails"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="10dp"
		android:layout_marginTop="5dp"
		android:layout_marginEnd="10dp"
		android:layout_marginBottom="5dp"
		android:ems="10"
		android:hint="@string/habit_details"
		android:inputType="textPersonName"
		android:minHeight="48dp" />

	<EditText
		android:id="@+id/editTextNumberDecimalPeriodicity"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="10dp"
		android:layout_marginTop="5dp"
		android:layout_marginEnd="10dp"
		android:layout_marginBottom="5dp"
		android:ems="10"
		android:hint="@string/habit_periodicity"
		android:inputType="numberDecimal"
		android:minHeight="48dp" />

	<CheckBox
		android:id="@+id/checkBoxDoneItToday"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="10dp"
		android:layout_marginTop="5dp"
		android:layout_marginEnd="10dp"
		android:layout_marginBottom="5dp"
		android:text="@string/habit_done_it_today" />

	<Button
		android:id="@+id/buttonAddHabit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="10dp"
		android:layout_marginTop="5dp"
		android:layout_marginEnd="10dp"
		android:layout_marginBottom="5dp"
		android:text="@string/add_habit" />
</LinearLayout>