<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".controller.HomeActivity">

	<ListView
		android:id="@+id/listViewHabitList"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:contentDescription="@string/list_of_habits"
		app:layout_constraintBaseline_toTopOf="parent"
		tools:layout_editor_absoluteX="10dp"
		tools:layout_editor_absoluteY="10dp">

<!--		<LinearLayout-->
<!--			android:id="@+id/linearLayoutHomeHabitList"-->
<!--			android:layout_width="match_parent"-->
<!--			android:layout_height="wrap_content"-->
<!--			android:orientation="vertical">-->

<!--		</LinearLayout>-->
	</ListView>

	<TextView
		android:id="@+id/textViewNoHabits"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/no_habits"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/floatingActionButtonAddHabit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="20dp"
		android:layout_marginBottom="20dp"
		android:clickable="true"
		android:contentDescription="@string/add_habit"
		android:focusable="true"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:srcCompat="@android:drawable/ic_menu_add" />
</androidx.constraintlayout.widget.ConstraintLayout>